# twitter-connector

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: main.yaml
app/: main.py
app/model/: classes.py
app/routers/: search.py  tweets.py  users.py  utils.py  v2.py
app/service/: entity_manager.py  persistence.py  twitter.py  twitter_v2.py
